--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,1 +1,2 @@
-addProdcut.form.productId.label = 'New Id eee'
+addProduct.form.productId.label = New Product ID
+AbstractUserDetailsAuthenticationProvider.badCredentials=The username or password you entered is incorrect.
