--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -2,3 +2,11 @@ addProduct.form.productId.label = New Product ID
 AbstractUserDetailsAuthenticationProvider.badCredentials=The username or password you entered is incorrect.
 addProdcut.form.productImage.label = Product Image file
 addProdcut.form.productPdf.label = Product PDF file
+addProduct.form.name.label = Name
+addProduct.form.unitPrice.label = Unitprice
+addProduct.form.description.label = Description
+addProduct.form.manufacturer.label = Manufacturer
+addProduct.form.category.label = Category
+addProduct.form.unitsInStock.label = Units in stock
+addProduct.form.condition.label = Condition
+addProduct.form.productImage.label = Product image
