--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -12,6 +12,8 @@ addProduct.form.condition.label = Condition
 addProduct.form.productImage.label = Product image
 Pattern.Product.productId.validation = Invalid product ID. It should start with character P followed by number.
 Size.Product.name.validation = Invalid product name. It should be minimum 4 characters to maximum 50 characters long.
+Size.Product.category.validation = Invalid product category. It should be minimum 4 characters to maximum 50 characters long.
 Min.Product.unitPrice.validation = Unit price is Invalid. It cannot have negative values.
 Digits.Product.unitPrice.validation = Unit price is Invalid.It can have maximum of 2 digit fraction and 8 digit integer.
 NotNull.Product.unitPrice.validation = Unit price is Invalid. It cannot be empty.
+com.packt.webstore.validator.ProductId.message = A product already exists with this product id.
